@@ -153,3 +153,4 @@ Changes between Qt3 and Qt4 port (to be completed)
 * release 0.40.0
 - use QMenu instead of Q3PopupMenu
 - use QTextEdit instead of K3TextEdit
+- disable explicit double buffering when drawing; should fix build for OSX
